codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_completion_timestamps(combined)
---
• Waited for background terminal · cargo test -p codex-core


CODEX
  Final response.

  [completion time]
