codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 984
expression: combined
---

CODEX · Tool Calls

┊ • Waited for background terminal · cargo test -p codex-core


CODEX
  Streaming response.

  [completion time]
